# yashshree-careers-website

./: .breakpoints  LICENSE  README.md  app.py  database.py  pyproject.toml  requirements.txt
static/scripts/: emailOTPValidation.js  formSubmission.js
templates/: application_failed.html  application_form.html  application_submitted.html  banner.html  bootstrap.html  footer.html  home.html  jobitem.html  jobpage.html  nav.html  toast.html
